--- a/report.html
+++ b/report.html
@@ -960,7 +960,7 @@
 		                       
 		                        <script> 
 		                        
-		                        var href = q; 
+		                        var href = scheme + q; 
 		                        var links = document.getElementsByClassName('dynamicLink');
     					for (var i = 0; i < links.length; i++) 
     					{
