--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <br><br>
   <form action="report.html" method="GET">
     <input type="text" id="q" name="q">
-    <input type="submit" value="Scan" id="submit">
+    <input type="submit" value="Scan" id="submit" class="button">
   </form>
   <br>    
 </html>
