--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	    <link href="includes/css/font-awesome/css/font-awesome.min.css" rel="stylesheet"> 
 	    <link href="includes/css/bootstrap-responsive.css" rel="stylesheet" >
 	    <link href="includes/js/aloha/css/aloha.css" rel="stylesheet" >
+	    <link href="includes/css/button-stylesheet.css" rel="stylesheet">
 	    
 	    <style>
 	    .nav-tabs-container {
