--- a/Scanner/index.html
+++ b/Scanner/index.html
@@ -36,7 +36,7 @@
 		q = inp.value;
 		var query = q.toString()
 		//alert(query);
-        var request = "report.html?q=" + qeury;
+        var request = "report.html?q=" + query;
         alert(request);
         //window.location=request;
       }
