--- a/index.html
+++ b/index.html
@@ -64,22 +64,33 @@ autoCloseAlert();
 </head>
 <body>
 <!-- Navigation Bar -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-<div class="navbar-header">
-<a class="navbar-brand" href="#"><i class="fa fa-gear"></i> OWASP OWTF</a>
-</div>
-<div>
-<ul class="nav navbar-nav pull-right">
-<li><a href="/ui/"><i class="fa fa-home"></i> Home</a></li>
-<li><a href="/ui/targets/"><i class="fa fa-crosshairs"></i> Targets</a></li>
-<li><a href="/ui/workers/"><i class="fa fa-th-large"></i> Workers</a></li>
-<li><a href="/ui/configuration/"><i class="fa fa-gears"></i> Settings</a></li>
-<li><a href="/ui/plugnhack/"><i class="fa fa-sign-in"></i> PlugnHack</a></li>
-<li><a href="/ui/help/"><i class="fa fa-link"></i> Help</a></li>
-</ul> <!-- nav navbar-nav -->
-</div>
-</nav>
+		<!-- start page header -->
+	    <div class="page-header">
+	    	<h2>
+	    		<a href="http://www.owtf.org">
+	    			<img src="img/logo_dark.png" class="img-rounded" alt="OWASP_OWTF_LOGO">
+	    		</a> 
+	    		Summary Report 
+	    		<small>
+				Version <sup>0.45.0</sup>
+				, Release <sup>Winter Blizzard</sup>
+				<span class="hidden">, Seed <sup><span id="seed"> 2NfaMaxkF_ </span></sup></span>
+				</small>
+
+	    		
+	    	</h2>
+	    </div>
 <!-- End Navigation Bar -->
+<div class="pain">
+<ul>
+	
+	<li><a href="http://lucif3rr.github.io/Scanner">Passive Online Scanner</a></li>
+	<li><a href="http://lucif3rr.github.io/Templates">Boilerplate Vulnerability Templates</a></li>
+</ul>
+</div>
+
+
+
 <!-- Start container -->
 <div class="container">
 <!-- Status box, used to display status messages -->
@@ -116,6 +127,7 @@ autoCloseAlert();
 </ul>
 </div>
 </div>
+
 <div class="panel panel-info span3">
 <div class="panel-heading">
 <div class="panel-title"> Calculators</div>
