--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
   {% endfor %}
 </div>
 
-<!-- Pagination links -->
+<!-- Pagination links 
 <div class="pagination">
   {% if paginator.next_page %}
     <a href="/page{{paginator.next_page}}" class="older">Older</a>
@@ -33,5 +33,7 @@ layout: default
     {% endif %}
   {% else %}
     <span class="previous">Newer</span>
+    
+    -->
   {% endif %}
 </div>
