--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
   {% endfor %}
 </div>
 
-<!-- Pagination links 
+<!-- Pagination links -->
 <div class="pagination">
   {% if paginator.next_page %}
     <a href="/page{{paginator.next_page}}" class="older">Older</a>
@@ -34,6 +34,6 @@ layout: default
   {% else %}
     <span class="previous">Newer</span>
     
-    -->
+    
   {% endif %}
 </div>
