--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <link href="http://gmpg.org/xfn/11" rel="profile">
 
     <title>
-      Hyde, a Jekyll theme
+      OWTF, Offensive Web Testing Framework
     </title>
 
     <!-- CSS -->
@@ -24,16 +24,16 @@
 
     <header class="masthead">
       <div class="masthead-inner">
-        <h1>Hyde</h1>
-        <p class="lead">An elegant open source and mobile first theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>
+        <h1>OWTF</h1>
+        <p class="lead">Offensive (Web) Testing Framework, is an OWASP+PTES-focused try to unite great tools and make pen testing more efficient, written mostly in Python.</p>
 
         <div class="colophon">
           <ul class="colophon-links">
             <li>
-              <a href="https://github.com/mdo/hyde/archive/v1.0.0.zip">Download</a>
+              <a href="https://github.com/owtf/owtf/archive/master.zip">Download</a>
             </li>
             <li>
-              <a href="https://github.com/mdo/hyde">GitHub project</a>
+              <a href="https://github.com/owtf/owtf">GitHub project</a>
             </li>
             <li>Currently v1.1</li>
           </ul>
